--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-document-picker": "^9.0.1",
+    "rn-fetch-blob": "^0.12.0",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
