--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-preset-react-native": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-document-picker": "^9.0.1",
-    "rn-fetch-blob": "^0.12.0",
-    "toggle-switch-react-native": "^3.3.0"
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-simple-bottom-sheet": "^1.0.4",
+    "react-native-toast-message": "^2.1.7",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
