--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "babel-preset-react-native": "^2.1.0",
@@ -19,7 +20,6 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-simple-bottom-sheet": "^1.0.4",
     "react-native-sound": "^0.11.2",
     "rn-fetch-blob": "^0.12.0"
   },
